Lab 2/LE2_prob4.txt
class One
{
    String rachil;
    One(String x)
    {
        rachil="e";
        System.out.println(rachil);
    }
}
class Two extends One
{
    
}


public class Main {
    public static void main(String[] args) {
        One puru= new One("m");
        
    }
}

show error :
Main.java:10: error: constructor One in class One cannot be applied to given types;
class Two extends One
^
  required: String
  found: no arguments
  reason: actual and formal argument lists differ in length
1 error

now remove error

class One
{
    String rachil;
    One(String x)
    {
        rachil=x;
        System.out.println(rachil);
    }
}
class Two extends One
{
    Two(String x)
    {
        super (x);
    }
}


public class Main {
    public static void main(String[] args) {
        One puru= new One("m");
        Two prince=new Two("R");
        
    }
}
